# novel-insights

./: .env.default  .gitignore  README.md  install_requires.txt  requirements.txt
backend/: docker-compose.yml
novelinsights/backend/: .dockerignore  .env.default  Dockerfile  alembic.ini  db_migrate.sh  db_revise.sh  docker-compose.yml  pyproject.toml
novelinsights/backend/alembic/: env.py
novelinsights/backend/alembic/versions/: 0b4c737fe8b6_initial_migration.py  30a3b84c8d48_initial_migration.py  35428b505023_.py  43a3ae8d7aa2_initial_migration.py
novelinsights/backend/db/: Dockerfile
novelinsights/backend/db/init/: 01_extensions.sql
novelinsights/backend/novelinsights/: app.py  main.py
novelinsights/backend/novelinsights/api/: routes.py
novelinsights/backend/novelinsights/core/: config.py  db.py  logging.py
novelinsights/backend/novelinsights/debug/: test.ipynb
novelinsights/backend/novelinsights/models/: __init__.py  base.py  metadata.py  user.py
novelinsights/backend/novelinsights/models/content/: content_unit.py  context.py  structure.py
novelinsights/backend/novelinsights/models/core/: user.py
novelinsights/backend/novelinsights/models/knowledge/: entity.py  node.py  relationship.py
novelinsights/backend/novelinsights/schemas/: __init__.py  base.py
novelinsights/backend/novelinsights/types/: __init__.py  base.py  content.py  core.py  knowledge.py
novelinsights/backend/novelinsights/utils/: parser.py  token.py  tokenizer.py
novelinsights/backend/tests/: conftest.py
novelinsights/backend/tests/integration/: test_db_models.py
(+127 files in other folders)
